Use Mixcloud's GraphQL API
Revive the project, and get it working again, by querying Mixcloud's GraphQL API instead of attempting to scrape HTML (which doesn't work anymore because there's no server-generated HTML to scrape anymore).